sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:8: error: '(' expected but identifier found.
      if plusPetit( getValeur(i), getValeur(i+1)): {
         ^AlgBubbleSort1:10: error: illegal start of simple expression
        ech = ech +1 }}
                      ^